<resources>
    <string name="app_name">ProjectNativeFoodJournal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="foodjournal">Food Journal</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="personalgoal">Personal Goal</string>
    <string name="maintain">Maintain Weight</string>
    <string name="gain">Gain Weight</string>
    <string name="loss">Loss Weight</string>
    <string name="start">Start The Journey</string>
    <string name="userprofile">User Profile</string>
    <string name="updateprofile">Update Profile</string>
    <string name="food">Food</string>
    <string name="report">Report</string>
    <string name="profile">Profile</string>
    <string name="calorie">Calories</string>
    <string name="date">Date</string>
    <string name="logthismeal">Log This Meal</string>
    <string name="logameal">Log A Meal</string>
    <string name="dailyenergyintake">Daily Energy Intake</string>
    <string name="status">Status</string>
    <string name="low">LOW</string>
    <string name="nullcalorie">0 Cal</string>
    <string name="targetcalorie">Target Cal</string>
    <string name="foodlog">Food Log</string>
    <string name="foodjournalreport">Food Journal Report</string>
    <string name="month">Month Year</string>
    <string name="foodname">Food Name</string>
    <string name="foodcalorie">Food Calorie</string>
</resources>